Fixed contrast ratio and added color variables

--- a/src/assets/styles/_color.scss
+++ b/src/assets/styles/_color.scss
@@ -1,9 +1,16 @@
+$alabaster: #FBFBFB;
 $alice-blue: #F4FBFF;
+$bismark: #466C83;
+$bittersweet: #FF6F61; 
 $chardon: #FFF2F0;
 $deep-cerulean: #0079AD;
+$deep-sea: #008566;
 $fiord: #3E5970;
 $jungle-mist: #BDCFDB;
 $nepal: #85A6BA;
+$orient: #005180;
 $pickled-bluewood: #293E4C;
 $scarlet: #E02200;
+$selago: #EDF3FC;
+$steel-blue: #5276B7;
 $white: #FFFFFF;
